# event_visualization

./: Dockerfile  README.md
event_viewer/event_viewer_2d/: .gitignore  CMakeLists.txt
event_viewer/event_viewer_2d/config/: data.yaml
event_viewer/event_viewer_2d/include/: camera.h  cuda_processor.h  hdf5_loader.h  image_loader.h  renderer.h  shader.h  types.h  viewer_state.h
event_viewer/event_viewer_2d/shaders/: event_accum.frag  event_accum.vert  image.frag  image.vert  quad.frag  quad.vert  simple.frag  simple.vert
event_viewer/event_viewer_2d/src/: camera.cpp  cuda_processor.cu  hdf5_loader.cpp  main.cpp  renderer.cpp  shader.cpp
event_viewer/event_viewer_3d/: CMakeLists.txt
event_viewer/event_viewer_3d/config/: data.yaml
event_viewer/event_viewer_3d/include/: camera.h  cuda_processor.h  event_data.h  hdf5_loader.h  image_loader.h  renderer.h  shader.h  types.h  viewer_state.h
event_viewer/event_viewer_3d/shaders/: box.frag  simple.vert
event_viewer/event_viewer_3d/src/: camera.cpp  cuda_processor.cu  hdf5_loader.cpp  image_loader.cpp  main.cpp  renderer.cpp  shader.cpp
